--- a/index.html
+++ b/index.html
@@ -12,5 +12,68 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <div class="logo">
+        <img src="./img/Logo.svg" alt="" />
+      </div>
+      <ul>
+        <li>
+          <img src="./img/MagnifyingGlass.svg" alt="" />
+        </li>
+        <li>
+          <a href="#">Explorar</a>
+        </li>
+        <li>
+          <a href="#">Minhas viagens</a>
+          <img src="./img/Profile pic.png" alt="" />
+        </li>
+      </ul>
+    </nav>
+    <header>
+      <div>
+        <div>
+          <img src="./img/Profile pic 2.png" alt="" />
+        </div>
+        <div>
+          <h1>Isabela Torres</h1>
+          <p>
+            Amante de viagens, cultura e gastronomia. 🌍✈️ Aqui compartilho as
+            histórias registradas em cada clique, explorando cantinhos
+            fascinantes do nosso planeta a partir da movimentada cidade de São
+            Paulo. 🏙️📸
+          </p>
+        </div>
+      </div>
+    </header>
+    <section>
+      <div>
+        <img src="./img/Image 01.png" alt="" />
+        <img src="./img/Image 02.png" alt="" />
+        <img src="./img/Image 03.png" alt="" />
+        <img src="./img/Image 04.png" alt="" />
+        <img src="./img/Image 05.png" alt="" />
+        <img src="./img/Image 06.png" alt="" />
+        <img src="./img/Image 07.png" alt="" />
+        <img src="./img/Image 08.png" alt="" />
+        <img src="./img/Image 09.png" alt="" />
+        <img src="./img/Image 10.png" alt="" />
+        <img src="./img/Image 11.png" alt="" />
+        <img src="./img/Image 12.png" alt="" />
+      </div>
+    </section>
+    <footer>
+      <div>
+        <p>Travelgram © 2024</p>
+      </div>
+      <ul>
+        <l1>
+          <p>Termos de uso</p>
+        </l1>
+        <l1>
+          <p>Politica de privacidade</p>
+        </l1>
+      </ul>
+    </footer>
+  </body>
 </html>
